php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50575 PDO_PGSQL LOBs are not compatible with PostgreSQL 8.5
Submitted: 2009-12-25 20:01 UTC Modified: 2009-12-25 20:11 UTC
From: mbeccati@php.net Assigned: mbeccati (profile)
Status: Closed Package: PDO related
PHP Version: 5.2.12 OS: *
Private report: No CVE-ID: None
 [2009-12-25 20:01 UTC] mbeccati@php.net
Description:
------------
Tested with 8.5alpha3. Some 5.3+ improvemnts were not backported to 5.2. Specifically ones that were raising the minimum requirements.

PDO_PGSQL in PHP 5.2 doesn't use PQunescapeBytea, but a copy of its code taken from an old version of Postgres, thus can't properly decode bytea fields on 8.5 because the default encoding has changed to the new "hex" format, while 5.3+ can.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-12-25 20:09 UTC] svn@php.net
Automatic comment from SVN on behalf of mbeccati
Revision: http://svn.php.net/viewvc/?view=revision&revision=292629
Log: - Fixed bug #50575 (PDO_PGSQL LOBs are not compatible with PostgreSQL 8.5)
# Affects 5.2 only, no need to MFB
 [2009-12-25 20:11 UTC] mbeccati@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC