- Fixed bug #50575 (PDO_PGSQL LOBs are not compatible with PostgreSQL 8.5) # Affects 5.2 only, no need to MFB